# bridge-stack-backend

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/auction/: constants.rs  mod.rs  tests.rs
src/bridge/: board.rs  contract.rs  mod.rs
src/bridge/auction/: mod.rs  tests.rs
src/bridge/cardplay/: mod.rs  trick.rs
src/bridge/contract/: util.rs
src/cardplay/: mod.rs  trick.rs
src/contract/: mod.rs  util.rs
