[package]
name = "backend"
version = "0.1.0"
authors = ["Bogdan Agica <bogdan.agica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"

bridge-deck = { git = "https://github.com/droundy/bridge-cards", branch = "main" }
display-as = { git = "https://github.com/droundy/display-as" }